[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ascii_characters.png" type="Texture" id=1]
[ext_resource path="res://scenes/player/character.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/target_indicator.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 10 )

[node name="character" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 32
vframes = 16

[node name="target_indicator" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Raycast DOWN" type="RayCast2D" parent="."]
scale = Vector2( 3, 1 )
enabled = true
cast_to = Vector2( 0, 32 )
collide_with_areas = true

[node name="Raycast UP" type="RayCast2D" parent="."]
scale = Vector2( 3, 1 )
enabled = true
cast_to = Vector2( 0, -32 )
collide_with_areas = true

[node name="Raycast RIGHT" type="RayCast2D" parent="."]
scale = Vector2( 1, 3 )
enabled = true
cast_to = Vector2( 32, 0 )
collide_with_areas = true

[node name="Raycast LEFT" type="RayCast2D" parent="."]
scale = Vector2( 1, 3 )
enabled = true
cast_to = Vector2( -32, 0 )
collide_with_areas = true

[node name="target_area" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="target_area"]
position = Vector2( 0, 2.38419e-07 )
scale = Vector2( 1.44235, 0.797661 )
shape = SubResource( 2 )

[node name="overhead_stats_position" type="Position2D" parent="."]
position = Vector2( -80, -72 )

[connection signal="area_entered" from="target_area" to="." method="_on_target_area_area_entered"]
[connection signal="area_exited" from="target_area" to="." method="_on_target_area_area_exited"]
